# coinbase-pro-rs

./: Cargo.toml
src/: adapters.rs  lib.rs  private.rs  public.rs  utils.rs  wsfeed.rs
src/structs/: public.rs
