[package]
name = "coinbase-pro-rs"
version = "0.7.1"
authors = ["ae <inv2004@gmail.com>"]
repository = "https://github.com/inv2004/coinbase-pro-rs"
description = "Coinbase pro client for Rust"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]
keywords = [ "exchange", "coinbase", "bitcoin", "websocket" ]

[features]
latency-tests = []

[dependencies]
async-stream = "*"
async-trait = "*"
base64 = "*"
chrono = { version = "*", features = [ "serde" ] }
futures = { version = "*" }
futures-util = { version = "*", features = ["compat"] }
hmac = "*"
hyper = { version = "*", features = ["stream", "client", "http1"] }
hyper-tls = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha2 = "*"
thiserror = "*"
tokio = { version = "1.0.2", features = ["full"] }
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
uritemplate = "*"
url = "*"
uuid = { version = "*", features = [ "serde", "v4" ] }

[dev-dependencies]
#pretty_env_logger = "0.4.0"
serial_test = "0.5.1"
